30UpdatePlan.md M2: batch google-java-format into one JVM spawn per generate()
Adds GeneratedProject::set_content and a format_all_java post-pass that
formats every generated .java file through one `google-java-format -i
@argfile` invocation instead of one JVM spawn per file. Byte-identical
across all golden/conformance/determinism/openapi suites; mean Java
generation time drops from 15.8s to 2.6s per project.